test: DataProviderService, MainService, refactor: switched from AspectJ Annotations to Decorators - for the sake of simplicity